# grecohome-dagster

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  renovate.json
.github/workflows/: docker-publish.yml  ghcr-retention.yml  supply-chain.yml  test.yml
docs/: ARCHITECTURE.md  BRONZE.md  DEPLOYMENT.md  ENV_TEMPLATE.md  GOLD.md  OBSERVABILITY_PLAN.md  SILVER.md  SILVER_GOLD_ROADMAP.md  VALIDATION.md  WHOOP_TOKEN_RUNBOOK.md
docs/adr/: 0001-bronze-only.md  0002-dagster-pins.md  0003-token-file.md  0004-garmin-port.md  0005-lingo-port.md  0006-soil-port.md  0007-silver-sleep.md  0008-silver-glucose.md  0009-silver-workouts.md  0010-silver-recovery.md  0011-gold-daily-wellness.md  0012-geocode-cache-silver-location.md  README.md
docs/specifications/: bronze.md  bronze_validation.md  silver_sleep.md
scripts/: sweep_streams.py  verify_bronze.py  whoop-reauth.sh
