# Virtual workspace root for the grecohome-dagster monorepo.
# This file has no [project] table on purpose: the root is a uv workspace
# coordinator, not a package. Each data subject lives under packages/ as its
# own member package, and they all share this single uv.lock.
# Pin the grpc stack (transitive via dagster) to match the host gRPC contract and,
# critically, to keep grpcio-health-checking's bundled protobuf gencode compatible
# with the protobuf *runtime* dagster locks (protobuf 6.x, capped below 7).
# grpcio-health-checking 1.82.0 regenerated grpc_health/v1/health_pb2.py with protoc
# gencode 7.35.0, which the runtime guard requires be paired with protobuf>=7.35.0 —
# but dagster holds protobuf at 6.x, so 1.82.0 crashes every code location on startup
# ("VersionError: gencode 7.35.0 runtime 6.33.6"). Keep grpc* on 1.81.1 until dagster
# moves to protobuf 7. See renovate.json (grpc bumps are disabled to prevent recurrence).
[tool.uv]
constraint-dependencies = [
    "grpcio==1.81.1",
    "grpcio-health-checking==1.81.1",
]

[tool.uv.workspace]
members = ["packages/core", "packages/whoop", "packages/garmin", "packages/lingo", "packages/soil", "packages/location", "packages/geocode", "packages/silver", "packages/gold"]

[tool.uv.sources]
grecohome-core = { workspace = true }

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "pytest-env==1.6.0",
    "freezegun==1.5.5",
    "respx==0.23.1",
    "ruff==0.15.20",
]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["packages"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "asyncio: Tests that use asyncio",
]
asyncio_mode = "auto"
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--import-mode=importlib",
    "--cov=grecohome_core",
    "--cov=grecohome_whoop",
    "--cov=grecohome_geocode",
    "--cov=grecohome_silver",
    "--cov=grecohome_gold",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-branch",
    "-ra",
]
norecursedirs = [".git", "dist", "build", "*.egg", "__pycache__", ".venv"]
env = [
    "BRONZE_ROOT=/tmp/grecohome-test-bronze",
    "SILVER_ROOT=/tmp/grecohome-test-silver",
    "GOLD_ROOT=/tmp/grecohome-test-gold",
    "WHOOP_CLIENT_ID=test_client_id",
    "WHOOP_CLIENT_SECRET=test_client_secret",
    "WHOOP_REDIRECT_URI=http://localhost:8000/callback",
    "WHOOP_TOKEN_PATH=/tmp/grecohome-test-token.json",
    "RELAY_CAPTURE_DIR=/tmp/grecohome-test-location-capture",
    "LOCATION_STATE_DIR=/tmp/grecohome-test-location-state",
    "PHOTON_BASE_URL=http://localhost:2322",
    "LOG_LEVEL=DEBUG",
    "ENVIRONMENT=test",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["packages/core/src", "packages/whoop/src", "packages/geocode/src", "packages/silver/src", "packages/gold/src"]
# scripts/ holds standalone reference/fallback validators (verify_bronze.py,
# sweep_streams.py) kept byte-faithful to their canonical versions maintained
# outside this repo; they're imported by nothing, so they're not held to the
# package lint standard.
extend-exclude = ["scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
